crates/ty_python_semantic/resources/mdtest/snapshots/invalid_await.md_-_Invalid_await_diagno…_-_`__await__`_definiti…_(ccb69f512135dd61).snap
---
source: crates/ty_test/src/lib.rs
expression: snapshot
---
---
mdtest name: invalid_await.md - Invalid await diagnostics - `__await__` definition with explicit invalid return type
mdtest path: crates/ty_python_semantic/resources/mdtest/diagnostics/invalid_await.md
---

# Python source files

## mdtest_snippet.py

```
1 | class InvalidAwaitReturn:
2 |     def __await__(self) -> int:
3 |         return 5
4 | 
5 | async def main() -> None:
6 |     await InvalidAwaitReturn()  # error: [invalid-await]
```

# Diagnostics

```
error[invalid-await]: `InvalidAwaitReturn` is not awaitable
 --> src/mdtest_snippet.py:6:11
  |
5 | async def main() -> None:
6 |     await InvalidAwaitReturn()  # error: [invalid-await]
  |           ^^^^^^^^^^^^^^^^^^^^
  |
 ::: src/mdtest_snippet.py:2:9
  |
1 | class InvalidAwaitReturn:
2 |     def __await__(self) -> int:
  |         ---------------------- method defined here
3 |         return 5
  |
info: `__await__` returns `int`, which is not a valid iterator
info: rule `invalid-await` is enabled by default

```
